--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.14.0",
     "axios": "^1.6.7",
